# open-bethel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: bethel-essence.md  fhsaa-2a-coverage.md  phase0-findings.md
phase0/: README.md  games-district-3-2a-2026.csv  games-fhsaa-fl-2026.csv  phase0.py  team_classes.json  validate.py
phase1/: README.md  contributions_demo.py
scripts/: build_district_3_2a_csv.py  prior_sensitivity.py
site/: README.md  build.py  build_og_image.py  build_team_classes.py  dedupe_csv.py  fhsaa_crosscheck.py
site/public/: CNAME  app.js  data.json  index.html  robots.txt  sitemap.xml  styles.css
src/open_bethel/: __init__.py  bethel.py  calibration.py  cli.py  connectivity.py  contributions.py  diagnostics.py  io.py  rpi.py  validation.py
tests/: test_bethel_nfl_1999.py  test_smoke.py
tests/fixtures/: nfl_1999.csv
