[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-bethel"
version = "0.1.0"
description = "An open, auditable ranking engine for high school sports."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ben McDonald" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.urls]
Repository = "https://github.com/Londonberry/open-bethel"

[project.scripts]
open-bethel-rank = "open_bethel.cli:main_rank"
open-bethel-validate = "open_bethel.cli:main_validate"
open-bethel-diagnose = "open_bethel.cli:main_diagnose"

[tool.hatch.build.targets.wheel]
packages = ["src/open_bethel"]
